	DLL.version(), file.access(), file.copy(), file.create(),
	file.info(), file.remove(), file.rename(), load(),
	normalizePath(), path.expand(), save(), shell(), shell.exec(),
	shortPathName(), Sys.chmod(), Sys.glob(), system(), unlink().
	have been converted to use Unicode filenames.

	Pathnames you select (choose.files, choose.dir, file.choose)
	are returned in UTF-8.

	The following functions have not (as yet) been addressed:
	dir()/list.files() (problematic because of 'pattern')


TIME ZONES

    o	This version of R no longer makes use of Windows' bug-ridden
	concept of time zones but replaces it by Arthur Olson's
	public-domain tz database (which is widely used, including on
	Linux, Mac OS X, Solaris, AIX, FreeBSD and by Java and Tcl).
	This means that time zones should now be referred to by their
	'standard' names, and output correctly (e.g. not the incorrect
	'GMT Daylight Time' for 'British Summer Time' used by
	Windows).

    o	An attempt is made (once per session) to identify the current
	timezone from the Windows' Registry.  If this does not work or
	is incorrect, set the 'TZ' environment variable appropriately:
	a list of known timezones is given in
	R_HOME/share/zoneinfo/zones.tab (some alternative names will
	also be recognized).  (Thanks to Uwe Ligges for testing
	various versions on German versions of Windows: time zone
	names are stored in the language of the Windows install.)

    o	Since the Windows C runtime does not think that times prior to
	1970-01-01 00:01 *in Seattle* are valid, heuristics had to be
	used for the time zones pre-1970.  Now the database is used for
	1902-1969 (and nowhere had DST prior to 1902 and the time
	offset is assumed to be the same as in 1902) and so the
	results are reliable from the onset of standard time (second
	half of the nineteenth century) until the near future (since
	legislators change time zones with little notice).


PACKAGE INSTALLATION

    o	Using PKG_C[XX]FLAGS instead of PKG_CPPFLAGS for -I and -D